welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:12: error: type mismatch;
 found   : Int
 required: Boolean
  else if(nbrcookies) {gauche()}
          ^